--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
     "react": "^19.0.0-rc.0",
     "react-dom": "^19.0.0-rc.0"
   },
@@ -17,6 +18,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "terser": "^5.44.1",
     "vite": "^5.3.1"
   }
 }
